--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
-.App {
-  text-align: center;
+
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
+ul{
+   list-style: none;
+}
+
+a{
+  text-decoration: none;
+  color: #000;
+}
+
+.btn, .form-control{
+    border-radius: .3rem;
+    padding: .5rem 1rem;
+    width: 100%;
+    border: 1px solid #fff;
+}
+
+.form-control:focus{
+    outline:0;
+    border: 1px solid #a8dadc;
+    box-shadow: 0px 0px 2px 2px #a8dadc;
+}
+
+.btn{
+    background-color:#aaa;
+    cursor: pointer;
+    border: 0;
+}
+
+.btn.btn--secondary{
+    background-color: #457b9d;
+    color: white;
+}
+.btn.btn--secondary:hover{
+  background-color:rgba(69, 123, 157, .5);
+}
+
+.btn.btn--primary{
+  background-color: #e63946;
+  color: #fff;
+}
+
+
+
+.btn.btn--primary:hover{
+  background-color: rgba(230, 57, 70, .5);
+}
+
+.btn.btn--primary.disabled{
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/****REACT FORM ****/
+
+.form-container{
+  background-color: #1d3557;
+  max-width: 400px;
+  margin: 2rem auto;
+  padding: 1rem;
+  color: #f1faee;
+  border-radius: .3rem;
+  box-shadow: 1px 1px 1px #000;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.form-container h3{
+  color:#a8dadc;
+  font-weight: 500;
+  font-size: 2rem;
+  text-shadow: 1px 1px 1px #f1faee;
 }
 
-.App-link {
-  color: #61dafb;
+.form-group{
+  margin: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text-danger{
+  color: #e63946;
+  font-style: italic;
+  font-size: .9rem;
 }
+
+.text-success{
+  color: #a8dadc;
+  font-style: italic;
+  font-size: .9rem;
+}
+
+/********* XXXXXX *********/
