--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,8 +1,11 @@
 .home{
-    margin-top: 1rem;
+    margin: 50px auto;
+    width: 100%;
+    max-width: 1200px;
     padding: 1rem;
     line-height: 2;
     border: 1px solid var(--primary-color);
+    border-radius: 4px;
 }
 
 .home h1{
