captcha inserted on localhost/manual-form

--- a/src/components/MainManualForm.css
+++ b/src/components/MainManualForm.css
@@ -75,7 +75,7 @@
     width: 450px;
 }
 
-/*************************************content**************************************/
+/*************************************main content**************************************/
 .main-manul-form__register{
     width: 100%;
 }
